style: fix code nav overflow

--- a/extension/src/components/CodeResult.css
+++ b/extension/src/components/CodeResult.css
@@ -48,7 +48,7 @@
   }
   .run-result-list {
     background: var(--editor-color);
-    overflow-y: scroll;
+    overflow-y: auto;
     color: white;
     height: calc(100% - 70px);
     border: 1px solid var(--edge-color);
